Cleaned makeMove code in AI class.